--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.99",
+    "@swc/jest": "^0.2.29",
     "@types/jest": "^29.5.10",
     "jest": "^29.7.0",
     "ts-node": "^10.9.1",
