--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/chance": "^1.1.6",
     "@types/jest": "^29.5.10",
     "@types/lodash": "^4.14.202",
+    "@types/sequelize": "^4.28.19",
     "@types/uuid": "^9.0.7",
     "jest": "^29.7.0",
     "ts-node": "^10.9.1",
@@ -25,6 +26,8 @@
     "chance": "^1.1.11",
     "class-validator": "^0.14.0",
     "lodash": "^4.17.21",
+    "sequelize": "^6.35.1",
+    "sequelize-typescript": "^2.1.6",
     "uuid": "^9.0.1"
   }
 }
