chore(development): added sqlite3

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "sequelize": "^6.35.1",
     "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
   }
 }
